Novo parágrafo para atalhos

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem qui unde eius mollitia doloribus, quidem, atque, eligendi ab voluptatem pariatur sunt! Animi facilis in deleniti eligendi corporis totam aspernatur cum.</p>
+    <p>Parágrafo dos atalhos.</p>
 </body>
 </html>
